--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,26 +56,14 @@ jobs:
         with:
             python-version: 3.8
 
-      - name: Install dump-env and create .env
-        env:
-          SECRET_DB_ENGINE: ${{ secrets.DB_ENGINE }}
-          SECRET_DB_NAME: ${{ secrets.DB_NAME }}
-          SECRET_POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-          SECRET_POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-          SECRET_DB_HOST: ${{ secrets.DB_HOST }}
-          SECRET_DB_PORT: ${{ secrets.DB_PORT }}
-          SECRET_SECRET_KEY: ${{ secrets.SECRET_KEY }}
-        run: |
-          python -m pip install --upgrade pip
-          pip install dump-env==1.2.0
-          dump-env --template=.env.template --prefix='SECRET_' > .env
-
       - name: Copy file via ssh password
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          rm: true
           port: 22
           source: './.env, nginx/default.conf, ./docker-compose.yaml'
           target: '/home/denis/code'
@@ -86,6 +74,8 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          rm: true
           script: |
             cd ~
             cd ./code
