--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
         with:
             python-version: 3.8
 
-      - name: Install dump-env and create .env
+      - name: create .env file
         env:
           SECRET_DB_ENGINE: ${{ secrets.DB_ENGINE }}
           SECRET_DB_NAME: ${{ secrets.DB_NAME }}
@@ -67,8 +67,6 @@ jobs:
           SECRET_SECRET_KEY: ${{ secrets.SECRET_KEY }}
         run: |
           python -m pip install --upgrade pip
-          pip install dump-env==1.2.0
-          dump-env --template=.env.template --prefix='SECRET_' > .env
 
       - name: Copy file via ssh password
         uses: appleboy/scp-action@master
