--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,16 +67,8 @@ jobs:
           SECRET_SECRET_KEY: ${{ secrets.SECRET_KEY }}
         run: |
           python -m pip install --upgrade pip
-
-      - name: Copy file via ssh password
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          port: 22
-          source: './.env, nginx/default.conf, ./docker-compose.yaml'
-          target: '/home/denis/code'
+          pip install dump-env==1.2.0
+          dump-env --template=.env.template --prefix='SECRET_' > .env
 
       - name: Executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
