--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v1z
       with:
         python-version: ${{ matrix.python-version }}
 
@@ -22,6 +22,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
+    - name: Lint with flake8
+      run: flake8 . --config=setup.cfg
+
+    - name: Test with UnitTest
+      run: python manage.py test
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
@@ -56,7 +62,7 @@ jobs:
         with:
             python-version: 3.8
 
-      - name: create .env file
+      - name: Install dump-env and create .env
         env:
           SECRET_DB_ENGINE: ${{ secrets.DB_ENGINE }}
           SECRET_DB_NAME: ${{ secrets.DB_NAME }}
@@ -69,6 +75,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install dump-env==1.2.0
           dump-env --template=.env.template --prefix='SECRET_' > .env
+
+      - name: Copy file via ssh password
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          source: './.env, nginx/default.conf, ./docker-compose.yaml'
+          target: '/home/denis/code'
 
       - name: Executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
