--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,16 @@ jobs:
         with:
             python-version: 3.8
 
+      - name: Copy file via ssh password
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          source: './.env, nginx/default.conf, ./docker-compose.yaml'
+          target: 'code'
+
       - name: Install dump-env and create .env
         env:
           SECRET_DB_ENGINE: ${{ secrets.DB_ENGINE }}
@@ -69,16 +79,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install dump-env==1.2.0
           dump-env --template=.env.template --prefix='SECRET_' > .env
-
-      - name: Copy file via ssh password
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          port: 22
-          source: './.env, nginx/default.conf, ./docker-compose.yaml'
-          target: '/home/denis/code'
 
       - name: Executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
