--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,19 +66,21 @@ jobs:
           source: './.env, nginx/default.conf, ./docker-compose.yaml'
           target: 'code'
 
-      - name: Install dump-env and create .env
-        env:
-          SECRET_DB_ENGINE: ${{ secrets.DB_ENGINE }}
-          SECRET_DB_NAME: ${{ secrets.DB_NAME }}
-          SECRET_POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-          SECRET_POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-          SECRET_DB_HOST: ${{ secrets.DB_HOST }}
-          SECRET_DB_PORT: ${{ secrets.DB_PORT }}
-          SECRET_SECRET_KEY: ${{ secrets.SECRET_KEY }}
-        run: |
-          python -m pip install --upgrade pip
-          pip install dump-env==1.2.0
-          dump-env --template=.env.template --prefix='SECRET_' > .env
+      - name: Create env file
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          rm: true
+          script: |
+            cd code/
+            echo 'SECRET_DB_ENGINE: ${{ secrets.DB_ENGINE }}
+                  SECRET_DB_NAME: ${{ secrets.DB_NAME }}
+                  SECRET_POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+                  SECRET_POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+                  SECRET_DB_HOST: ${{ secrets.DB_HOST }}
+                  SECRET_DB_PORT: ${{ secrets.DB_PORT }}' > .env
 
       - name: Installing docker
         uses: appleboy/ssh-action@master
