--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,12 +74,12 @@ jobs:
           rm: true
           script: |
             cd code/
-            echo 'SECRET_DB_ENGINE= ${{ secrets.DB_ENGINE }}
-                  SECRET_DB_NAME= ${{ secrets.DB_NAME }}
-                  SECRET_POSTGRES_USER= ${{ secrets.POSTGRES_USER }}
-                  SECRET_POSTGRES_PASSWORD= ${{ secrets.POSTGRES_PASSWORD }}
-                  SECRET_DB_HOST= ${{ secrets.DB_HOST }}
-                  SECRET_DB_PORT= ${{ secrets.DB_PORT }}' > .env
+            echo 'DB_ENGINE= ${{ secrets.DB_ENGINE }}
+                  DB_NAME= ${{ secrets.DB_NAME }}
+                  POSTGRES_USER= ${{ secrets.POSTGRES_USER }}
+                  POSTGRES_PASSWORD= ${{ secrets.POSTGRES_PASSWORD }}
+                  DB_HOST= ${{ secrets.DB_HOST }}
+                  DB_PORT= ${{ secrets.DB_PORT }}' > .env
 
       - name: Installing docker
         uses: appleboy/ssh-action@master
