--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
     image: postgres:13
     restart: always
     container_name: postgres
+    environment:
+      POSTGRES_PASSWORD: 'postgres'
     volumes:
       - ./postgres_data:/var/lib/postgresql/data/
     env_file:
