--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,9 @@ services:
     image: romulinn2575/foodgram_project:latest
     container_name: foodgram
     restart: always
+    command: gunicorn code/foodgram.wsgi:application --bind 0.0.0.0:8000
+    ports:
+      - "8000:8000"
     volumes:
       - ./static_volume:/code/static/
       - ./media_volume:/code/media/
