--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,6 +42,8 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./static_volume:/code/static
       - ./media_volume:/code/media
-
+    depends_on:
+      - db
+      - foodgram
     ports:
       - "80:80"
