--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,12 +36,9 @@ services:
       - ./.env
 
   nginx:
-    image: nginx:1.19.3
+    image: "nginx:latest"
     container_name: webserver
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./static_volume:/code/static
       - ./media_volume:/code/media
-    depends_on:
-      - db
-      - web
