--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,7 +36,7 @@ services:
       - ./.env
 
   nginx:
-    image: "nginx:latest"
+    image: nginx:latest
     container_name: webserver
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
