--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,20 +1,13 @@
-upstream web {
-    server web:8000;
-}
 server {
     listen 80;
-    server_name localhost 127.0.0.1 84.201.152.21;
-    server_tokens off;
-    location / {
-        proxy_pass http://web;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
     location /static/ {
         alias /code/static/;
     }
     location /media/ {
         alias /code/media/;
     }
+    location / {
+        proxy_pass http://web:8000;
+    }
+    server_tokens off;
 }
