--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ asgiref==3.3.1
 attrs==20.3.0
 backcall==0.2.0
 billiard==3.6.3.0
-#black
+black
 celery==5.0.5
 click==7.1.2
 click-didyoumean==0.0.3
@@ -66,3 +66,4 @@ vine==5.0.0
 wcwidth==0.2.5
 zipp==3.4.0
 python-dotenv==0.13.0
+
