--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,9 @@ services:
   web:
     image: romulinn2575/foodgram_project:latest
     restart: always
+    command: gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000
+    ports:
+      - "8000:8000"
     volumes:
       - ./static_volume:/code/static/
       - ./media_volume:/code/media/
