--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,14 @@ services:
     env_file:
       - ./.env
 
+  redis:
+    image: redis:6.0.10
+    container_name: redis
+    env_file:
+      - ./.env
+    ports:
+      - "6379:6379"
+
   web:
     image: romulinn2575/foodgram_project:latest
     restart: always
@@ -20,8 +28,8 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./static_volume:/code/static/
-      - ./media_volume:/code/media/
+      - static_volume:/code/static/
+      - media_volume:/code/media/
     depends_on:
       - db
     env_file:
@@ -33,7 +41,7 @@ services:
       - '80:80'
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./static_volume:/code/static
-      - ./media_volume:/code/media
+      - static_volume:/code/static
+      - media_volume:/code/media
     depends_on:
       - web
