--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,7 +32,7 @@ services:
     ports:
       - '80:80'
     volumes:
-      - nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - static_volume:/code/static
       - media_volume:/code/media
     depends_on:
