--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,8 +20,8 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - static_volume:/code/static/
-      - media_volume:/code/media/
+      - ./static_volume:/code/static/
+      - ./media_volume:/code/media/
     depends_on:
       - db
     env_file:
@@ -33,7 +33,7 @@ services:
       - '80:80'
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - static_volume:/code/static
-      - media_volume:/code/media
+      - ./static_volume:/code/static
+      - ./media_volume:/code/media
     depends_on:
       - web
