--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       - ./.env
 
   web:
-    image: romulinn2575/foodgram_project:latest
+    image: romulinn2575/foodgram:latest
     restart: always
     volumes:
       - ./static_volume:/code/static/
